test/files/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
eeefa01bb3bc224f75a2ee3d82a82054f4532b5f ?plugins.jar
